steps: spacing issue solved.

--- a/src/styles/css/at-am-byzantine-crystal.css
+++ b/src/styles/css/at-am-byzantine-crystal.css
@@ -2551,6 +2551,9 @@ input:checked + .toggle-slider:before {
   background-color: #f8d9ac;
   color: white; }
 
+.floatingbutton-circle:focus {
+  outline: none; }
+
 /** floatingbutton - Structure CSS **/
 .floatingbutton {
   z-index: 3;
@@ -3481,6 +3484,13 @@ input:checked + .toggle-slider:before {
   background-color: black;
   margin-right: 3px;
   color: whitesmoke; }
+
+.chiplabelicon {
+  cursor: pointer;
+  padding-left: 10px; }
+
+.chiplabel {
+  cursor: pointer; }
 
 /*****************************************************************************
  Component Name : Grid Layout
@@ -5849,7 +5859,10 @@ fieldset {
   margin-top: 0px; }
 
 .stepwizard-row {
-  display: table-row; }
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between; }
 
 .stepwizard {
   display: table;
@@ -5869,6 +5882,7 @@ fieldset {
   z-index: 0; }
 
 .stepwizard-step {
+  width: 100%;
   display: table-cell;
   text-align: center;
   position: relative; }
