--- a/src/styles/css/at-md-mauve-orchid.css
+++ b/src/styles/css/at-md-mauve-orchid.css
@@ -2593,6 +2593,9 @@ input:checked + .toggle-slider:before {
   background-color: #f8d9ac;
   color: #ffffff; }
 
+.floatingbutton-circle:focus {
+  outline: none; }
+
 /** floatingbutton - Structure CSS **/
 .floatingbutton {
   z-index: 3;
@@ -3523,6 +3526,13 @@ input:checked + .toggle-slider:before {
   background-color: black;
   margin-right: 3px;
   color: whitesmoke; }
+
+.chiplabelicon {
+  cursor: pointer;
+  padding-left: 10px; }
+
+.chiplabel {
+  cursor: pointer; }
 
 /*****************************************************************************
  Component Name : Grid Layout
@@ -5600,7 +5610,10 @@ fieldset {
   margin-top: 0px; }
 
 .stepwizard-row {
-  display: table-row; }
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between; }
 
 .stepwizard {
   display: table;
@@ -5620,6 +5633,7 @@ fieldset {
   z-index: 0; }
 
 .stepwizard-step {
+  width: 100%;
   display: table-cell;
   text-align: center;
   position: relative; }
@@ -7032,7 +7046,7 @@ input:focus ~ .inputfieldbar:before, input:focus ~ .inputfieldbar:after {
   -o-transition: transform 0.5s, opacity 0.5s;
   -ms-transition: transform 0.5s, opacity 0.5s; }
 
-.floatingbutton:active:after {
+.floatingbutton:focus:not(:active) {
   opacity: 0.7;
   transform: scale(0, 0);
   -webkit-transform: scale(0, 0);
